Details
-
Bug
-
Resolution: Done
-
P4: Low
-
5.1.1
-
None
-
Win32
-
qtactiveqt: 0d29579baffd4f31a3ec39590117f4fee821694d (5.2.1, stable, 9.12.2013) Qt: 4: 3bef845f4623e0edcd52ddcffee3612f4f7f6779 (20.12.2013, 4.8.6)
Description
QAxConnection class is poorly designed. When a connection point enumerator is requested it returns a pointer to itself. As a consequence all connection point enumerators of the same object share the same state. Calling Reset of any enumerator resets states of all.
Enumerator iterator is not initialized when enumerator is requested. Calling IEnumConnections->Next without IEnumConnections->Reset causes a crash in iterator dereferencing.
Attachments
Issue Links
- relates to
-
QTBUG-35264 Application crashes in the IEnumConnections->Next method
-
- Closed
-
-
QTBUG-35265 IEnumConnections->Skip method does't work.
-
- Closed
-
-
QTBUG-35266 Application hangs in the IEnumConnections->Skip method after calling IEnumConnections->Reset method
-
- Closed
-
-
QTBUG-35284 IEnumConnections->Next method crashes if optional pointer to the number of fetched items is not provided
-
- Closed
-
-
QTBUG-35286 IEnumConnections->Clone method makes a clone that crashes in its Next method
-
- Closed
-